Hygieia_UI/UI/src/components/widgets/feature/jiraView.less
@import (reference) '../../../app/css/variables.less';
@import (reference) '../../../app/css/mixins.less';
@import (less)  '../../../../bower_components/angular-ui-select/dist/select.css';

.jira-widget-header-hamburger{
	float: left;
    margin-left: 1%;
    margin-top: 7px;
}
.jira-widget-header-edMenu{
	float: left;
    margin-top: 5px;
    margin-left: 2.1%;
}
.jira-widget-header-edText{
	float: left;
    color: #fff;
    font-size: 13px;
    margin-left: .5%;
    margin-top: 9px;
}

.jira-widget-props{
	padding:0px;
	background:#efefef;
}
.jira-widget-props-specific{
	background: #fff;
	min-height: 155px !important;

	width: 32%;
	margin-left:1.3%;
}
.jira-widget-props-specific-large{
	background: #fff;
	min-height: 155px !important;
	margin-left:1.3%;
}


.agile-board-outer-box {
	background:#fff;
    box-shadow:0px 1px 1px #888888;
    padding-left: 0px;
    padding-right: 0px;
}
.ovalshape-data-props{
	margin-bottom: 0px;
	color: #000;
	width: 48px;
    height: 55px;
    border-top-left-radius: 30px;
    border-top-right-radius: 30px;
    background: #d6d6d6;
    text-align: center;
    font-weight: 600;
    font-size:16px;
    padding-top:16%;
    margin-bottom:10px;
}
.custom-td-width-defect{
    width:22% !important;
}
.font-props{
    font-weight:500;
    font-size:11px;
}
.padding-highest-text{
   
}
.padding-high-text{
    padding-left:2.8%;
}
.padding-medium-text{
   
}
.padding-low-text{
    padding-left:3.2%;
}
.padding-lowest-text{
    
}

.agile-board-blue-nav {
    background: #1766A4;
    margin-left: 0px;
    margin-right: 0px;
    min-height: 0px;
}

.agile-board-nav-row {
    padding-top: 8px;
    padding-bottom: 6px;
}

.agile-board-emu-logo {
    padding-left: 1.4%;
    width: 5.33%;
}

.agile-board-emu-label {
    font-size: 17px;
    font-weight: 500;
    color: #fff;
    padding-top: 6px;
}

.agile-board-username {
    color: #fff;
    direction: rtl;
    text-align: center;
    padding-left: 14.1%;
    padding-top: 8px;
}

.agile-board-dropdown-width {
    width: 4.33% !important;
    padding-top: 4px;
}

.agile-board-sprint-label {
    padding-top: 30px;
    font-size: 20px;
    padding-left: 20px;
}

.agile-board-defect-release-label {
    padding-top: 30px;
    font-size: 20px;
    padding-left: 0px;
}

//agile board main content//

.agile-board-outer-box {
    background:#fff;
    box-shadow:0px 1px 1px #888888;
    padding-left: 0px;
    padding-right: 0px;
}

.agile-board-sprint-header-properties {
    padding-left: 17px;
    font-size: 16px;
    color: #000;
    padding-top:1%;
}

.agile-board-sub-header {
    font-weight:600;
    font-size:14px;
}

.agile-board-sub-header-padding {
    padding-left:0px;
}

.agile-board-issue-col {
    padding-top: 10px;
    padding-left: 20px;
}

.agile-board-sprint-list-col {
    .agile-board-issue-col;
     padding-right: 20px;
}

.agile-board-sprint-name {
    max-width: 100px;
    text-overflow: ellipsis;
    overflow: hidden;
}

.agile-board-completed-issue-color {
    color: rgb(0,153,255);
}

.agile-board-committed-issue-color {
    color: rgb(0,128,43);
}

.agile-board-issue-add-color {
    color: rgb(255,71,26);
}

.agile-board-issue-remove-color {
    color: rgb(140,87,214);
}

.agile-board-defect-found-color {
    color: rgb(107,184,255);
}

.agile-board-defect-resolve-color {
    color: rgb(0,128,43);
}

.agile-board-defect-unresolved-color {
    color: rgb(255,71,26);
}

.agile-board-sprint-list-head {
    font-weight:400;
    font-size:11px;
}

.agile-board-row-padding-widgets {
    padding-top: 1%;
}

.agile-board-sprint-chart-padding {
    padding-top: 10px;
    padding-bottom: 10px;
}

.agile-board-defect-chart-padding {
    padding-top: 10px;
}

.agile-board-defect-block-padding {
    padding-bottom: 2%;
}

.agile-board-defect-col-padding {
    padding-top: 4%;
}

.agile-board-release-padding {
    padding-left: 0px;
    padding-right: 0px;
}

.agile-board-main-block {
    padding-left: 20px;
    padding-right: 20px;
}

.agile-board-image {
    height: 80px;
    border-bottom:1px solid #b3b3b3;
}

.agile-board-padding {
    padding-left: 1.6%;
}

.agile-board-text {
    margin-top: 3.1%;
    font-size: 22px;
}

.agile-board-link {
    font-size: 14px;
}

